crates/flowscope-core/tests/snapshots/golden__golden_multi_file_keeps_sources.snap
---
source: crates/flowscope-core/tests/golden.rs
expression: cleaned
---
{
  "statements": [
    {
      "statementIndex": 0,
      "statementType": "SELECT",
      "sourceName": "alpha.sql",
      "nodes": [
        {
          "id": "output_74d22f755ec62dbc",
          "type": "output",
          "label": "Output"
        },
        {
          "id": "table_b1180f6188cee2e2",
          "type": "table",
          "label": "alpha_table",
          "qualifiedName": "alpha_table",
          "resolutionSource": "implied"
        }
      ],
      "edges": [
        {
          "id": "edge_fd830a5502c8a94d",
          "from": "table_b1180f6188cee2e2",
          "to": "output_74d22f755ec62dbc",
          "type": "data_flow",
          "approximate": true
        }
      ],
      "joinCount": 0,
      "complexityScore": 5
    },
    {
      "statementIndex": 1,
      "statementType": "SELECT",
      "sourceName": "beta.sql",
      "nodes": [
        {
          "id": "output_a5989731f6ee502b",
          "type": "output",
          "label": "Output (2)"
        },
        {
          "id": "table_8d1cecbc26a50f36",
          "type": "table",
          "label": "beta_table",
          "qualifiedName": "beta_table",
          "resolutionSource": "implied"
        }
      ],
      "edges": [
        {
          "id": "edge_e9fe97259acf2f33",
          "from": "table_8d1cecbc26a50f36",
          "to": "output_a5989731f6ee502b",
          "type": "data_flow",
          "approximate": true
        }
      ],
      "joinCount": 0,
      "complexityScore": 5
    }
  ],
  "globalLineage": {
    "nodes": [
      {
        "id": "output_74d22f755ec62dbc",
        "type": "output",
        "label": "Output",
        "canonicalName": {
          "name": "Output"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "output_74d22f755ec62dbc"
          }
        ]
      },
      {
        "id": "output_a5989731f6ee502b",
        "type": "output",
        "label": "Output (2)",
        "canonicalName": {
          "name": "Output (2)"
        },
        "statementRefs": [
          {
            "statementIndex": 1,
            "nodeId": "output_a5989731f6ee502b"
          }
        ]
      },
      {
        "id": "table_8d1cecbc26a50f36",
        "type": "table",
        "label": "beta_table",
        "canonicalName": {
          "name": "beta_table"
        },
        "statementRefs": [
          {
            "statementIndex": 1,
            "nodeId": "table_8d1cecbc26a50f36"
          }
        ],
        "resolutionSource": "implied"
      },
      {
        "id": "table_b1180f6188cee2e2",
        "type": "table",
        "label": "alpha_table",
        "canonicalName": {
          "name": "alpha_table"
        },
        "statementRefs": [
          {
            "statementIndex": 0,
            "nodeId": "table_b1180f6188cee2e2"
          }
        ],
        "resolutionSource": "implied"
      }
    ],
    "edges": [
      {
        "id": "edge_e9fe97259acf2f33",
        "from": "table_8d1cecbc26a50f36",
        "to": "output_a5989731f6ee502b",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 1
        }
      },
      {
        "id": "edge_fd830a5502c8a94d",
        "from": "table_b1180f6188cee2e2",
        "to": "output_74d22f755ec62dbc",
        "type": "data_flow",
        "producerStatement": {
          "statementIndex": 0
        }
      }
    ]
  },
  "issues": [
    {
      "severity": "info",
      "code": "APPROXIMATE_LINEAGE",
      "message": "SELECT * from 'alpha_table' - column list unknown without schema metadata",
      "statementIndex": 0
    },
    {
      "severity": "info",
      "code": "APPROXIMATE_LINEAGE",
      "message": "SELECT * from 'beta_table' - column list unknown without schema metadata",
      "statementIndex": 1
    }
  ],
  "summary": {
    "statementCount": 2,
    "tableCount": 2,
    "columnCount": 0,
    "joinCount": 0,
    "complexityScore": 10,
    "issueCount": {
      "errors": 0,
      "warnings": 0,
      "infos": 2
    },
    "hasErrors": false
  }
}
